@@ -1,3 +1,4 @@
+- implemented IOC-298 - add a method to FromAssembly that will scan all assemblies in the application for installers
 - implemented IOC-292 - Add fluent registration entry point that passes through truly "all types" that is interfaces, or abstract classes can be registered too
 - implemented IOC-291 - Add alias class to AllTypes that is better named, like 'Classes'
 - implemented IOC-287 - Add overloads to OnCreate and OnDestroy that only take the instance and leave the container out as it is often superfluous
